Revert "Fixes issue with wrapping on section containers that cause the content to overlap the footer at certain breakpoints (#4427)" (#4429)
This reverts commit 63debf4453b5b58be7a924c6e608b2df086e15f5.

--- a/app/webpacker/styles/layout.scss
+++ b/app/webpacker/styles/layout.scss
@@ -68,6 +68,7 @@ body {
 section.container {
   display: flex;
   flex-grow: 0;
+  flex-wrap: wrap;
   flex-direction: column;
   margin: 1em 0;
 
